cabal-version:      2.4
name:               diagrams-hs
version:            0.1.0.0

author:             Bob Klaase
maintainer:         ''

executable diagrams-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      diagrams-lib >= 1.4.4,
                      diagrams-svg >= 1.4.3,
                      split >= 0.2.3.4

    hs-source-dirs:   app
    default-language: Haskell2010
